chore: temporary remove `jest --config jest.config.js --findRelatedTests` from `lint-staged`

--- a/package.json
+++ b/package.json
@@ -160,8 +160,7 @@
       "adio",
       "yarn prettier:fix",
       "eslint",
-      "git add",
-      "jest --config jest.config.js --findRelatedTests"
+      "git add"
     ]
   },
   "yargs": {
