--- a/packages/app-security/package.json
+++ b/packages/app-security/package.json
@@ -13,16 +13,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.8.3",
-    "babel-plugin-emotion": "^9.2.8",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-named-asset-import": "^1.0.0-next.3e165448"
+    "@webiny/app": "^4.12.1",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
