--- a/api/code/files/graphql/package.json
+++ b/api/code/files/graphql/package.json
@@ -5,13 +5,15 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.0",
-    "@webiny/handler-apollo-server": "^4.0.0-beta.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/api-settings-manager": "^4.0.0-beta.0",
-    "@webiny/api-files": "^4.0.0-beta.0",
-    "@webiny/api-plugin-files-resolvers-mongodb": "^4.0.0-beta.0",
-    "@webiny/project-utils": "^4.0.0-beta.4"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/handler-apollo-server": "^4.12.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@webiny/api-plugin-security-cognito": "^4.12.1",
+    "@webiny/api-security": "^4.12.1",
+    "@webiny/api-security-permissions-manager": "^4.12.1",
+    "@webiny/api-settings-manager": "^4.12.1",
+    "@webiny/api-files": "^4.12.1",
+    "@webiny/api-plugin-files-resolvers-mongodb": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   }
 }
