--- a/api/code/files/manage/package.json
+++ b/api/code/files/manage/package.json
@@ -5,7 +5,7 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.0",
-    "@webiny/serverless-files": "^4.0.0-beta.0"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/serverless-files": "^4.12.1"
   }
 }
