--- a/api/code/security/permissionsManager/package.json
+++ b/api/code/security/permissionsManager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-aws-documentdb-proxy",
+  "name": "api-security-permissions-manager",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
@@ -7,6 +7,8 @@
   "dependencies": {
     "@webiny/handler": "^4.12.1",
     "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@webiny/api-security-permissions-manager": "^4.12.1",
+    "@webiny/api-security-user-management": "^4.12.1",
     "@webiny/project-utils": "^4.12.1"
   }
 }
