--- a/api/code/security/validateAccessToken/package.json
+++ b/api/code/security/validateAccessToken/package.json
@@ -5,9 +5,9 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/project-utils": "^4.0.0-beta.4"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.12.1",
+    "@webiny/api-security-user-management": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   }
 }
