--- a/apps/admin/code/app/package.json
+++ b/apps/admin/code/app/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-admin-full": "^4.0.0-beta.0",
+    "@webiny/app-template-admin-full": "^4.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "@webiny/cli": "^4.0.0-beta.0",
-    "@webiny/project-utils": "^4.0.0-beta.0"
+    "@webiny/cli": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
