--- a/apps/site/code/app/package.json
+++ b/apps/site/code/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@webiny/app-template-site": "^4.0.0-beta.0",
+    "@webiny/app-template-site": "^4.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
