--- a/api/code/files/graphql/tsconfig.json
+++ b/api/code/files/graphql/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "extends": "../../../tsconfig",
   "references": [
-    { "path": "../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../packages/api-security" },
-    { "path": "../../../packages/api-settings-manager" },
-    { "path": "../../../packages/api-files" },
-    { "path": "../../../packages/api-plugin-files-resolvers-mongodb" },
-    { "path": "../../../packages/handler" },
-    { "path": "../../../packages/handler-apollo-server" }
+    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-security-permissions-manager" },
+    { "path": "../../../../packages/api-settings-manager" },
+    { "path": "../../../../packages/api-files" },
+    { "path": "../../../../packages/api-plugin-files-resolvers-mongodb" },
+    { "path": "../../../../packages/handler" },
+    { "path": "../../../../packages/handler-apollo-server" }
   ]
 }
