--- a/api/code/formBuilder/tsconfig.json
+++ b/api/code/formBuilder/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../packages/api-i18n" },
-    { "path": "../../packages/api-security" },
-    { "path": "../../packages/api-settings-manager" },
-    { "path": "../../packages/api-form-builder" },
-    { "path": "../../packages/handler" },
-    { "path": "../../packages/handler-apollo-server" }
+    { "path": "../../../packages/api-plugin-commodo-db-proxy" },
+    { "path": "../../../packages/api-i18n" },
+    { "path": "../../../packages/api-security" },
+    { "path": "../../../packages/api-security-permissions-manager" },
+    { "path": "../../../packages/api-settings-manager" },
+    { "path": "../../../packages/api-form-builder" },
+    { "path": "../../../packages/handler" },
+    { "path": "../../../packages/handler-apollo-server" }
   ]
 }
