--- a/api/code/security/permissionsManager/tsconfig.json
+++ b/api/code/security/permissionsManager/tsconfig.json
@@ -2,9 +2,8 @@
   "extends": "../../../tsconfig",
   "references": [
     { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../packages/api-security" },
+    { "path": "../../../../packages/api-security-permissions-manager" },
     { "path": "../../../../packages/api-security-user-management" },
-    { "path": "../../../../packages/handler" },
-    { "path": "../../../../packages/handler-apollo-server" }
+    { "path": "../../../../packages/handler" }
   ]
 }
