--- a/packages/cli-plugin-deploy-pulumi/package.json
+++ b/packages/cli-plugin-deploy-pulumi/package.json
@@ -13,27 +13,15 @@
   ],
   "description": "A tool to bootstrap a Webiny project.",
   "dependencies": {
-    "@serverless/core": "^1.1.2",
-    "@webiny/serverless-component": "^4.7.0",
-    "@webiny/tracking": "^4.7.0",
-    "ansi-escapes": "^4.3.1",
+    "@webiny/pulumi-sdk": "^4.7.0",
+    "indent-string": "^4.0.0",
     "chalk": "^4.0.0",
-    "chokidar": "^3.4.0",
-    "debug": "^4.1.1",
     "execa": "^4.0.0",
-    "figures": "^3.2.0",
     "fs-extra": "^9.0.0",
     "get-yarn-workspaces": "^1.0.2",
-    "graphlib": "^2.1.8",
     "load-json-file": "^6.2.0",
     "lodash.get": "^4.4.2",
-    "lodash.kebabcase": "^4.1.1",
     "node-notifier": "^7.0.1",
-    "ora": "^4.0.4",
-    "ramda": "^0.27.0",
-    "strip-ansi": "^6.0.0",
-    "traverse": "^0.6.6",
-    "typescript": "^3.8.3",
     "write-json-file": "^4.3.0",
     "progress": "^2.0.3"
   },
