feat: introduce `handler-aws` package

--- a/packages/handler-aws/tsconfig.json
+++ b/packages/handler-aws/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig",
-  "include": ["src"]
+  "references": [
+    { "path": "../handler" },
+    { "path": "../handler-client" },
+    { "path": "../handler-http" }
+  ]
 }
