--- a/packages/handler-client/tsconfig.build.json
+++ b/packages/handler-client/tsconfig.build.json
@@ -1,9 +1,13 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
+  "exclude": ["node_modules", "../handler"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
-  }
+  },
+  "references": [
+    { "path": "../handler/tsconfig.build.json" }
+  ]
 }
