chore: add missing `handler*` packages

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -84,18 +84,26 @@
       "@webiny/commodo-fields-storage-db-proxy": ["./packages/commodo-fields-storage-db-proxy/src"],
       "@webiny/graphql/*": ["./packages/graphql/src/*"],
       "@webiny/graphql": ["./packages/graphql/src"],
-      "@webiny/handler-ssr": ["./packages/handler-ssr/src"],
-      "@webiny/handler-ssr/*": ["./packages/handler-ssr/src/*"],
       "@webiny/handler/*": ["./packages/handler/src/*"],
       "@webiny/handler": ["./packages/handler/src"],
-      "@webiny/handler-apollo-server": ["./packages/handler-apollo-server/src"],
-      "@webiny/handler-apollo-server/*": ["./packages/handler-apollo-server/src/*"],
       "@webiny/handler-apollo-gateway": ["./packages/handler-apollo-gateway/src"],
       "@webiny/handler-apollo-gateway/*": ["./packages/handler-apollo-gateway/src/*"],
+      "@webiny/handler-apollo-server": ["./packages/handler-apollo-server/src"],
+      "@webiny/handler-apollo-server/*": ["./packages/handler-apollo-server/src/*"],
+      "@webiny/handler-aws": ["./packages/handler-aws/src"],
+      "@webiny/handler-aws/*": ["./packages/handler-aws/src/*"],
+      "@webiny/handler-aws-documentdb-proxy": ["./packages/handler-aws-documentdb-proxy/src"],
+      "@webiny/handler-aws-documentdb-proxy/*": ["./packages/handler-aws-documentdb-proxy/src/*"],
+      "@webiny/handler-client": ["./packages/handler-client/src"],
+      "@webiny/handler-client/*": ["./packages/handler-client/src/*"],
       "@webiny/handler-files": ["./packages/handler-files/src"],
       "@webiny/handler-files/*": ["./packages/handler-files/src/*"],
+      "@webiny/handler-http": ["./packages/handler-http/src"],
+      "@webiny/handler-http/*": ["./packages/handler-http/src/*"],
       "@webiny/handler-index": ["./packages/handler-index/src"],
       "@webiny/handler-index/*": ["./packages/handler-index/src/*"],
+      "@webiny/handler-ssr": ["./packages/handler-ssr/src"],
+      "@webiny/handler-ssr/*": ["./packages/handler-ssr/src/*"],
       "@webiny/form": ["./packages/form/src"],
       "@webiny/form/*": ["./packages/form/src/*"],
       "@webiny/i18n": ["./packages/i18n/src"],
