--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -34,8 +34,12 @@
       "@webiny/api-settings-manager/*": ["./packages/api-settings-manager/src/*"],
       "@webiny/api-security/*": ["./packages/api-security/src/*"],
       "@webiny/api-security": ["./packages/api-security/src"],
-      "@webiny/api-security-permissions-manager/*": ["./packages/api-security-permissions-manager/src/*"],
-      "@webiny/api-security-permissions-manager": ["./packages/api-security-permissions-manager/src"],
+      "@webiny/api-security-permissions-manager/*": [
+        "./packages/api-security-permissions-manager/src/*"
+      ],
+      "@webiny/api-security-permissions-manager": [
+        "./packages/api-security-permissions-manager/src"
+      ],
       "@webiny/api-security-user-management/*": ["./packages/api-security-user-management/src/*"],
       "@webiny/api-security-user-management": ["./packages/api-security-user-management/src"],
       "@webiny/app/*": ["./packages/app/src/*"],
@@ -90,6 +94,8 @@
       "@webiny/handler-apollo-gateway/*": ["./packages/handler-apollo-gateway/src/*"],
       "@webiny/handler-apollo-server": ["./packages/handler-apollo-server/src"],
       "@webiny/handler-apollo-server/*": ["./packages/handler-apollo-server/src/*"],
+      "@webiny/handler-args": ["./packages/handler-args/src"],
+      "@webiny/handler-args/*": ["./packages/handler-args/src/*"],
       "@webiny/handler-aws": ["./packages/handler-aws/src"],
       "@webiny/handler-aws/*": ["./packages/handler-aws/src/*"],
       "@webiny/handler-aws-documentdb-proxy": ["./packages/handler-aws-documentdb-proxy/src"],
