--- a/packages/handler-client/package.json
+++ b/packages/handler-client/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@webiny/handler": "^4.12.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/plugins": "^4.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
