--- a/packages/handler-client/tsconfig.json
+++ b/packages/handler-client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig",
   "references": [
-    { "path": "../handler" }
+    { "path": "../handler" },
+    { "path": "../plugins" }
   ]
 }
