--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .idea
 .webpack
 .webiny
-.serverless
 .env*
 .npmrc
 htpasswd
@@ -22,7 +21,7 @@ build/
 .verdaccio
 .history
 *.tsbuildinfo
-.cloudfnsrc.js
-.cloudfns/
 yarn.lock
 cypress.json
+.graphqlconfig
+schema.graphql
