fix: add missing dependencies

--- a/packages/api-plugin-commodo-db-proxy/package.json
+++ b/packages/api-plugin-commodo-db-proxy/package.json
@@ -26,7 +26,8 @@
     "@shelf/jest-mongodb": "^1.1.5",
     "@types/mongodb": "^3.5.16",
     "@webiny/graphql": "^4.12.1",
-    "@webiny/handler": "^4.12.1"
+    "@webiny/handler": "^4.12.1",
+    "@webiny/handler-args": "^4.12.1"
   },
   "publishConfig": {
     "access": "public",
