--- a/packages/api-headless-cms/tsconfig.json
+++ b/packages/api-headless-cms/tsconfig.json
@@ -11,6 +11,8 @@
     { "path": "../commodo-graphql" },
     { "path": "../handler" },
     { "path": "../handler-apollo-server" },
+    { "path": "../handler-client" },
+    { "path": "../handler-http" },
     { "path": "../validation" }
   ]
 }
