--- a/packages/api-security-permissions-manager/tsconfig.json
+++ b/packages/api-security-permissions-manager/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../api-security" }, { "path": "../graphql" }, { "path": "../handler" }]
+  "references": [
+    { "path": "../api-security" },
+    { "path": "../graphql" },
+    { "path": "../handler" },
+    { "path": "../handler-client" }
+  ]
 }
