--- a/packages/api-security-user-management/tsconfig.json
+++ b/packages/api-security-user-management/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [
     { "path": "../api-security" },
     { "path": "../graphql" },
-    { "path": "../handler" }
+    { "path": "../handler" },
+    { "path": "../handler-client" },
+    { "path": "../handler-http" }
   ]
 }
