--- a/packages/api-settings-manager/tsconfig.json
+++ b/packages/api-settings-manager/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../handler" }, { "path": "../graphql" }]
+  "references": [
+    { "path": "../handler" },
+    { "path": "../handler-client" },
+    { "path": "../graphql" }
+  ]
 }
