--- a/packages/handler-apollo-gateway/tsconfig.json
+++ b/packages/handler-apollo-gateway/tsconfig.json
@@ -1,4 +1,10 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../handler" }, { "path": "../graphql" }]
+  "references": [
+    { "path": "../graphql" },
+    { "path": "../handler" },
+    { "path": "../handler-args" },
+    { "path": "../handler-client" },
+    { "path": "../handler-http" }
+  ]
 }
