--- a/packages/handler-apollo-server/tsconfig.json
+++ b/packages/handler-apollo-server/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{ "path": "../handler" }, { "path": "../graphql" }]
+  "references": [{ "path": "../handler" }, { "path": "../handler-http" }, { "path": "../graphql" }]
 }
