--- a/packages/handler-files/tsconfig.json
+++ b/packages/handler-files/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig",
-  "references": [{"path": "../handler"}]
+  "references": [{ "path": "../handler" }, { "path": "../handler-http" }]
 }
