--- a/packages/pulumi-sdk/package.json
+++ b/packages/pulumi-sdk/package.json
@@ -32,7 +32,8 @@
     "ignore": {
       "dependencies": [
         "@pulumi/pulumi",
-        "@pulumi/aws"
+        "@pulumi/aws",
+        "@pulumi/awsx"
       ]
     }
   },
