--- a/packages/serverless-files/tsconfig.json
+++ b/packages/serverless-files/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["./src"],
   "references": [
     { "path": "../handler" },
+    { "path": "../handler-client" },
     { "path": "../validation" }
   ]
 }
