--- a/packages/api-i18n/tsconfig.build.json
+++ b/packages/api-i18n/tsconfig.build.json
@@ -8,6 +8,7 @@
     "../api-security",
     "../commodo",
     "../commodo-graphql",
+    "../handler",
     "../validation"
   ],
   "compilerOptions": {
@@ -20,6 +21,7 @@
     { "path": "../api-plugin-commodo-db-proxy/tsconfig.build.json" },
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../commodo-graphql/tsconfig.build.json" },
+    { "path": "../handler/tsconfig.build.json" },
     { "path": "../validation/tsconfig.build.json" }
   ]
 }
