--- a/packages/api-plugin-security-cognito/package.json
+++ b/packages/api-plugin-security-cognito/package.json
@@ -15,6 +15,7 @@
     "@webiny/api-security": "^4.12.1",
     "@webiny/api-security-user-management": "^4.11.0-beta.1",
     "@webiny/graphql": "^4.12.1",
+    "@webiny/handler-http": "^4.12.1",
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.1",
