--- a/packages/api-security-permissions-manager/tsconfig.build.json
+++ b/packages/api-security-permissions-manager/tsconfig.build.json
@@ -1,7 +1,14 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "dist", "../handler", "../graphql", "../api-security"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "../handler",
+    "../handler-client",
+    "../graphql",
+    "../api-security"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -10,6 +17,7 @@
   "references": [
     { "path": "../api-security/tsconfig.build.json" },
     { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../handler/tsconfig.build.json" }
+    { "path": "../handler/tsconfig.build.json" },
+    { "path": "../handler-client/tsconfig.build.json" }
   ]
 }
