--- a/packages/commodo-fields-storage-db-proxy/tsconfig.build.json
+++ b/packages/commodo-fields-storage-db-proxy/tsconfig.build.json
@@ -1,9 +1,11 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
+  "exclude": ["node_modules", "./dist", "../handler-client"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
-  }
+  },
+  "references": [{ "path": "../handler-client/tsconfig.build.json" }]
 }
