--- a/packages/handler-apollo-gateway/package.json
+++ b/packages/handler-apollo-gateway/package.json
@@ -15,10 +15,15 @@
     "Adrian Smijulj <adrian@webiny.com>"
   ],
   "dependencies": {
+    "@apollographql/graphql-playground-html": "^1.6.26",
     "@apollo/gateway": "^0.14.1",
     "@webiny/graphql": "^4.12.1",
     "@webiny/handler": "^4.12.1",
+    "@webiny/handler-args": "^4.12.1",
+    "@webiny/handler-client": "^4.12.1",
+    "@webiny/handler-http": "^4.12.1",
     "@webiny/plugins": "^4.12.1",
+    "apollo-server-core": "2.17.0",
     "apollo-server-env": "^2.4.3",
     "apollo-server-lambda": "2.15.1",
     "boolean": "^3.0.1",
