--- a/packages/handler-apollo-gateway/tsconfig.build.json
+++ b/packages/handler-apollo-gateway/tsconfig.build.json
@@ -1,7 +1,15 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../handler", "../graphql"],
+  "exclude": [
+    "node_modules",
+    "./dist",
+    "../graphql",
+    "../handler",
+    "../handler-args",
+    "../handler-client",
+    "../handler-http"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -9,6 +17,9 @@
   },
   "references": [
     { "path": "../graphql/tsconfig.build.json" },
-    { "path": "../handler/tsconfig.build.json" }
+    { "path": "../handler/tsconfig.build.json" },
+    { "path": "../handler-args/tsconfig.build.json" },
+    { "path": "../handler-client/tsconfig.build.json" },
+    { "path": "../handler-http/tsconfig.build.json" }
   ]
 }
