--- a/packages/handler-apollo-server/package.json
+++ b/packages/handler-apollo-server/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.5.5",
     "@webiny/graphql": "^4.12.1",
     "@webiny/handler": "^4.12.1",
+    "@webiny/handler-http": "^4.12.1",
     "@webiny/plugins": "^4.12.1",
     "apollo-server-lambda": "2.15.1",
     "boolean": "^3.0.1",
