--- a/packages/handler-files/tsconfig.build.json
+++ b/packages/handler-files/tsconfig.build.json
@@ -1,11 +1,14 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "./dist", "../handler"],
+  "exclude": ["node_modules", "./dist", "../handler", "../handler-http"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist"
   },
-  "references": [{ "path": "../handler/tsconfig.build.json" }]
+  "references": [
+    { "path": "../handler/tsconfig.build.json" },
+    { "path": "../handler-http/tsconfig.build.json" }
+  ]
 }
