--- a/packages/handler-http/package.json
+++ b/packages/handler-http/package.json
@@ -14,7 +14,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.5.5"
+    "@babel/runtime": "^7.5.5",
+    "@webiny/handler": "^4.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
