--- a/packages/handler-ssr/package.json
+++ b/packages/handler-ssr/package.json
@@ -18,6 +18,8 @@
     "@webiny/commodo": "^4.12.1",
     "@webiny/commodo-fields-storage-db-proxy": "^4.12.1",
     "@webiny/handler": "^4.12.1",
+    "@webiny/handler-client": "^4.12.1",
+    "@webiny/handler-http": "^4.12.1",
     "got": "^9.6.0",
     "lodash.flow": "^3.5.0",
     "mime-types": "^2.1.26",
