--- a/packages/handler-ssr/tsconfig.build.json
+++ b/packages/handler-ssr/tsconfig.build.json
@@ -5,6 +5,8 @@
     "node_modules",
     "./dist",
     "../handler",
+    "../handler-client",
+    "../handler-http",
     "../commodo",
     "../commodo-fields-storage-db-proxy"
   ],
@@ -15,6 +17,8 @@
   },
   "references": [
     { "path": "../handler/tsconfig.build.json" },
+    { "path": "../handler-client/tsconfig.build.json" },
+    { "path": "../handler-http/tsconfig.build.json" },
     { "path": "../commodo/tsconfig.build.json" },
     { "path": "../commodo-fields-storage-db-proxy/tsconfig.build.json" }
   ]
