--- a/packages/handler-ssr/tsconfig.json
+++ b/packages/handler-ssr/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig",
   "references": [
     {"path": "../handler"},
+    {"path": "../handler-client"},
+    {"path": "../handler-http"},
     {"path": "../commodo"},
     {"path": "../commodo-fields-storage-db-proxy"}
   ]
