--- a/packages/serverless-files/package.json
+++ b/packages/serverless-files/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@webiny/handler": "^4.12.1",
+    "@webiny/handler-client": "^4.12.1",
     "@webiny/project-utils": "^4.12.1",
     "aws-sdk": "^2.539.0",
     "object-hash": "^1.3.1",
