--- a/packages/handler-graphql-playground/package.json
+++ b/packages/handler-graphql-playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webiny/handler-index",
+  "name": "@webiny/handler-graphql-playground",
   "version": "4.12.1",
   "main": "index.js",
   "license": "MIT",
@@ -7,22 +7,25 @@
     "type": "git",
     "url": "https://github.com/webiny/webiny-js.git"
   },
-  "description": "A pluginable function for the cloud.",
+  "description": "The Apollo Server as a function.",
   "contributors": [
     "Pavel Denisjuk <pavel@webiny.com>",
     "Sven Al Hamad <sven@webiny.com>",
     "Adrian Smijulj <adrian@webiny.com>"
   ],
   "dependencies": {
+    "@apollographql/graphql-playground-html": "^1.6.26",
     "@babel/runtime": "^7.5.5",
     "@webiny/handler": "^4.12.1",
-    "mime-types": "^2.1.26",
-    "zlib": "^1.0.5"
+    "@webiny/handler-http": "^4.12.1",
+    "apollo-server-core": "2.17.0",
+    "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5"
+    "@babel/preset-env": "^7.5.5",
+    "jest-mock-console": "^1.0.0"
   },
   "publishConfig": {
     "access": "public",
