--- a/packages/handler-graphql-playground/tsconfig.build.json
+++ b/packages/handler-graphql-playground/tsconfig.build.json
@@ -1,13 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": [
-    "node_modules",
-    "../handler",
-    "../handler-client",
-    "../handler-http",
-    "../handler-args"
-  ],
+  "exclude": ["node_modules", "./dist", "../handler", "../handler-http" ,"../graphql"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -15,8 +9,7 @@
   },
   "references": [
     { "path": "../handler/tsconfig.build.json" },
-    { "path": "../handler-client/tsconfig.build.json" },
     { "path": "../handler-http/tsconfig.build.json" },
-    { "path": "../handler-args/tsconfig.build.json" }
+    { "path": "../graphql/tsconfig.build.json" }
   ]
 }
