fix: update dependencies

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -94,6 +94,8 @@
       "@webiny/handler-apollo-gateway/*": ["./packages/handler-apollo-gateway/src/*"],
       "@webiny/handler-apollo-server": ["./packages/handler-apollo-server/src"],
       "@webiny/handler-apollo-server/*": ["./packages/handler-apollo-server/src/*"],
+      "@webiny/handler-graphql-playground": ["./packages/handler-graphql-playground/src"],
+      "@webiny/handler-graphql-playground/*": ["./packages/handler-graphql-playground/src/*"],
       "@webiny/handler-args": ["./packages/handler-args/src"],
       "@webiny/handler-args/*": ["./packages/handler-args/src/*"],
       "@webiny/handler-aws": ["./packages/handler-aws/src"],
@@ -106,8 +108,6 @@
       "@webiny/handler-files/*": ["./packages/handler-files/src/*"],
       "@webiny/handler-http": ["./packages/handler-http/src"],
       "@webiny/handler-http/*": ["./packages/handler-http/src/*"],
-      "@webiny/handler-index": ["./packages/handler-index/src"],
-      "@webiny/handler-index/*": ["./packages/handler-index/src/*"],
       "@webiny/handler-ssr": ["./packages/handler-ssr/src"],
       "@webiny/handler-ssr/*": ["./packages/handler-ssr/src/*"],
       "@webiny/form": ["./packages/form/src"],
