chore: reorder workspaces items

--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
       "api/settingsManager",
       "api/databaseProxy",
       "api/files/*",
-      "api/formBuilder",
-      "api/cms/*",
       "api/i18n/*",
       "api/pageBuilder",
       "api/security/*",
@@ -17,15 +15,17 @@
       "apps/site/code/app",
       "apps/site/code/databaseProxy",
       "api/code/apolloGateway",
-      "api/code/settingsManager",
+      "api/code/awsDocumentDbProxy",
+      "api/cms/*",
       "api/code/databaseProxy",
       "api/code/files/*",
       "api/code/formBuilder",
-      "api/code/cms/*",
+      "api/code/graphqlPlayground",
       "api/code/i18n/*",
+      "api/code/settingsManager",
+      "api/code/cms/*",
       "api/code/pageBuilder",
-      "api/code/security/*",
-      "api/code/awsDocumentDbProxy"
+      "api/code/security/*"
     ],
     "nohoist": [
       "**/inquirer/**",
