--- a/api/code/graphqlPlayground/package.json
+++ b/api/code/graphqlPlayground/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "api-apollo-gateway",
+  "name": "graphql-playground",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
   },
   "dependencies": {
     "@webiny/handler": "^4.12.1",
-    "@webiny/handler-apollo-gateway": "^4.12.1",
+    "@webiny/handler-aws": "^4.12.1",
+    "@webiny/handler-graphql-playground": "^4.12.1",
     "@webiny/project-utils": "^4.12.1"
   }
 }
