chore: add `app-headless-cms` as dependency

--- a/packages/app-security-user-management/tsconfig.build.json
+++ b/packages/app-security-user-management/tsconfig.build.json
@@ -5,9 +5,9 @@
     "node_modules",
     "**/__tests__/**",
     "./dist",
-    "../app-security",
     "../app",
     "../app-admin",
+    "../app-headless-cms",
     "../app-security",
     "../form",
     "../plugins",
@@ -23,6 +23,7 @@
   "references": [
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-admin/tsconfig.build.json" },
+    { "path": "../app-headless-cms/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
     { "path": "../form/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
