--- a/packages/app-security-user-management/tsconfig.json
+++ b/packages/app-security-user-management/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../app" },
     { "path": "../app-admin" },
+    { "path": "../app-headless-cms" },
     { "path": "../app-security" },
     { "path": "../form" },
     { "path": "../plugins" },
