refactor: pb settings social image output

--- a/package.json
+++ b/package.json
@@ -124,7 +124,9 @@
     "build:api": "lerna run build --scope=@webiny/api* --scope=@webiny/handler* --stream",
     "build:packages": "lerna run build --scope=@webiny/* --ignore=@webiny/serv* --stream",
     "watch:apps": "lerna run watch --scope=@webiny/app* --stream --parallel",
+    "watch:app-pb": "lerna run watch --scope=@webiny/app-page-builder --stream --parallel",
     "watch:api": "lerna run watch --scope=@webiny/api* --stream --parallel",
+    "watch:api-pb": "lerna run watch --scope=@webiny/api-page-builder --stream --parallel",
     "watch:packages": "lerna run watch --scope=@webiny/* --ignore=@webiny/serv* --stream --parallel",
     "clear-dist": "yarn rimraf packages/*/dist",
     "contributors:add": "contreebutors add --username",
