fix: change `api-files` to `api-file-manager`

--- a/api/code/files/graphql/tsconfig.json
+++ b/api/code/files/graphql/tsconfig.json
@@ -5,7 +5,7 @@
     { "path": "../../../../packages/api-security" },
     { "path": "../../../../packages/api-security-permissions-manager" },
     { "path": "../../../../packages/api-settings-manager" },
-    { "path": "../../../../packages/api-files" },
+    { "path": "../../../../packages/api-file-manager" },
     { "path": "../../../../packages/api-plugin-files-resolvers-mongodb" },
     { "path": "../../../../packages/handler" },
     { "path": "../../../../packages/handler-apollo-server" }
