--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -17,8 +17,8 @@
     "paths": {
       "@webiny/api-cookie-policy/*": ["./packages/api-cookie-policy/src/*"],
       "@webiny/api-cookie-policy": ["./packages/api-cookie-policy/src"],
-      "@webiny/api-files/*": ["./packages/api-files/src/*"],
-      "@webiny/api-files": ["./packages/api-files/src"],
+      "@webiny/api-file-manager/*": ["./packages/api-file-manager/src/*"],
+      "@webiny/api-file-manager": ["./packages/api-file-manager/src"],
       "@webiny/api-headless-cms": ["./packages/api-headless-cms/src"],
       "@webiny/api-headless-cms/*": ["./packages/api-headless-cms/src/*"],
       "@webiny/api-form-builder/*": ["./packages/api-form-builder/src/*"],
@@ -122,8 +122,6 @@
       "@webiny/storybook-utils/*": ["./packages/storybook-utils/src/*"],
       "@webiny/react-router": ["./packages/react-router/src"],
       "@webiny/react-router/*": ["./packages/react-router/src/*"],
-      "@webiny/serverless-files": ["./packages/serverless-files/src"],
-      "@webiny/serverless-files/*": ["./packages/serverless-files/src/*"],
       "@webiny/validation": ["./packages/validation/src"],
       "@webiny/validation/*": ["./packages/validation/src/*"],
       "@webiny/ui/*": ["./packages/ui/src/*"]
@@ -141,17 +139,6 @@
     "./packages/cwp-template-full",
     "./packages/cwp-template-cms",
     "./packages/project-utils",
-    "./packages/serverless-api-gateway",
-    "./packages/serverless-app",
-    "./packages/serverless-aws-api-gateway",
-    "./packages/serverless-aws-cloudfront",
-    "./packages/serverless-aws-cognito-user-pool",
-    "./packages/serverless-aws-iam-role",
-    "./packages/serverless-aws-lambda",
-    "./packages/serverless-aws-s3",
-    "./packages/serverless-aws-s3-object",
-    "./packages/serverless-component",
-    "./packages/serverless-function",
     "./packages/tracking",
     "**resources.js",
     "./webiny.root.js"
