--- a/api-old/files/graphql/package.json
+++ b/api-old/files/graphql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-files-graphql",
+  "name": "api-file-manager-graphql",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
@@ -12,7 +12,7 @@
     "@webiny/api-security": "^4.11.0-beta.1",
     "@webiny/api-security-permissions-manager": "^4.11.0-beta.1",
     "@webiny/api-settings-manager": "^4.11.0-beta.1",
-    "@webiny/api-files": "^4.11.0-beta.1",
+    "@webiny/api-file-manager": "^4.11.0-beta.1",
     "@webiny/api-plugin-files-resolvers-mongodb": "^4.11.0-beta.1",
     "@webiny/project-utils": "^4.11.0-beta.1"
   }
