--- a/api/code/files/download/package.json
+++ b/api/code/files/download/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-files-download",
+  "name": "api-file-manager-download",
   "version": "0.1.0",
   "scripts": {
     "build": "webiny run build"
