fix: update dependencies

--- a/packages/api-headless-cms/package.json
+++ b/packages/api-headless-cms/package.json
@@ -26,7 +26,8 @@
     "@webiny/handler-client": "^4.12.1",
     "@webiny/handler-apollo-server": "^4.12.1",
     "@webiny/validation": "^4.12.1",
-    "boolean": "^3.0.1",
+    "apollo-server-core": "2.17.0",
+    "apollo-server-env": "^2.4.3",
     "fast-deep-equal": "^3.1.1",
     "fecha": "^4.0.0",
     "graphql-tag": "^2.10.1",
