--- a/packages/api-file-manager/package.json
+++ b/packages/api-file-manager/package.json
@@ -27,7 +27,11 @@
     "graphql-tag": "^2.10.1",
     "mime": "^2.4.4",
     "sanitize-filename": "^1.6.3",
-    "uniqid": "^5.0.3"
+    "uniqid": "^5.0.3",
+    "@webiny/handler-client": "^4.12.1",
+    "@webiny/project-utils": "^4.12.1",
+    "aws-sdk": "^2.539.0",
+    "object-hash": "^1.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -60,7 +64,8 @@
     ],
     "ignore": {
       "src": [
-        "aws-sdk"
+        "aws-sdk",
+        "sharp"
       ]
     }
   },
