--- a/packages/handler-apollo-server/package.json
+++ b/packages/handler-apollo-server/package.json
@@ -19,7 +19,8 @@
     "@webiny/handler": "^4.12.1",
     "@webiny/handler-http": "^4.12.1",
     "@webiny/plugins": "^4.12.1",
-    "apollo-server-lambda": "2.15.1",
+    "apollo-server-core": "2.17.0",
+    "apollo-server-env": "^2.4.3",
     "boolean": "^3.0.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1"
