chore(app-file-manager): update dependency
add `app-security-user-management` & `plugins` as dependency

--- a/packages/app-file-manager/tsconfig.json
+++ b/packages/app-file-manager/tsconfig.json
@@ -3,8 +3,10 @@
   "references": [
     { "path": "../app-admin" },
     { "path": "../app-security" },
+    { "path": "../app-security-user-management" },
     { "path": "../app-page-builder" },
     { "path": "../form" },
+    { "path": "../plugins" },
     { "path": "../react-router" },
     { "path": "../validation" },
     { "path": "../ui" }
