--- a/packages/app-security-user-management/package.json
+++ b/packages/app-security-user-management/package.json
@@ -24,6 +24,7 @@
     "@webiny/react-router": "^4.11.0-beta.1",
     "@webiny/ui": "^4.11.0-beta.1",
     "@webiny/validation": "^4.11.0-beta.1",
+    "apollo-client": "^2.2.8",
     "dot-prop-immutable": "^1.4.0",
     "emotion": "10.0.17",
     "graphql-tag": "^2.10.1",
